--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
+    "pretest:e2e": "npm rebuild better-sqlite3",
     "test:e2e": "playwright test",
+    "pretest:e2e:ui": "npm rebuild better-sqlite3",
     "test:e2e:ui": "playwright test --ui"
   },
   "dependencies": {
